matricies shifting correctly

--- a/main.scss
+++ b/main.scss
@@ -35,6 +35,7 @@ $borderStyle: 3px solid black;
 .matContainer {
     margin-left: 20px;
     margin-top: 10px;
+/*    min-height: 60px;*/
 }
 body {
     margin: 0;
@@ -44,6 +45,7 @@ body {
 }
 .label {
     position: relative;
+    height:40px;
 }
 label:hover {
     background: #f2f5ff;
@@ -66,9 +68,12 @@ label:hover {
 .matInput {
     font-size: 20px;
     display: inline-flex;
-    min-height: 150px;
-}
 
+}
+.guiModifiers {
+    position: relative;
+    height:50px;
+}
 .rowColModifier {
     height: 30px;
     position: relative;
